--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,66 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-wrapper {
+  max-width: 740px;
+  margin: auto;
+  padding: 30px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-wrapper-header {
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-wrapper-body {
+  padding: 0 20px;
+}
+
+.app-wrapper-body-select {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 20px;
+}
+
+.app-wrapper-body-select__input-mode {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.app-wrapper-body-select__start-button {
+  font-size: 18px;
+  border: none;
+  background-color: rgb(67, 67, 255);
   color: white;
+  border-radius: 10px;
+  padding: 7px 15px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.app-wrapper-body-game-panel {
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app-wrapper-body-game-panel__row {
+  display: flex;
+  justify-content: center;
+}
+
+.app-wrapper-body-game-panel__data-cell {
+  border: 1px solid black;
+  background-color: white;
+  height: 40px;
+  width: 40px;
+}
+
+.app-wrapper-body-game-panel__data-cell_active {
+  background-color: blue;
+}
+
+.app-wrapper-body-game-panel__row:not(:last-child)
+  .app-wrapper-body-game-panel__data-cell {
+  border-bottom: none;
+}
+
+.app-wrapper-body-game-panel__data-cell:not(:last-child) {
+  border-right: none;
 }
